// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsletterPuffButton renders the button with the text \`Saving...\` 1`] = `
<button
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderColor": "#1D1D1B",
      "borderRadius": 2,
      "borderStyle": "solid",
      "borderWidth": 2,
      "color": "#1D1D1B",
      "cursor": "pointer",
      "elevation": 0,
      "fontFamily": "GillSansMTStd-Medium",
      "fontSize": 16,
      "height": 45,
      "justifyContent": "center",
      "letterSpacing": 0.2,
      "lineHeight": 0,
      "minWidth": 100,
      "paddingTop": 4,
      "width": "100%",
    }
  }
  type="button"
>
  Saving…
</button>
`;

exports[`NewsletterPuffButton renders the button with the text \`Sign up to newsletter\` 1`] = `
<button
  onClick={[MockFunction]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderColor": "#1D1D1B",
      "borderRadius": 2,
      "borderStyle": "solid",
      "borderWidth": 2,
      "color": "#1D1D1B",
      "cursor": "pointer",
      "elevation": 0,
      "fontFamily": "GillSansMTStd-Medium",
      "fontSize": 16,
      "height": 45,
      "justifyContent": "center",
      "letterSpacing": 0.2,
      "lineHeight": 0,
      "minWidth": 100,
      "paddingTop": 4,
      "width": "100%",
    }
  }
  type="button"
>
  Sign up now
</button>
`;

exports[`NewsletterPuffButton should track button viewed and clicked in analytics 1`] = `Array []`;

exports[`NewsletterPuffButton should track button viewed in analytics 1`] = `Array []`;
